--- a/public/treaty.rb.html
+++ b/public/treaty.rb.html
@@ -37,34 +37,35 @@ body {color:white;background-color:black;}
 </pre></code><h2>We start counting on the <strong>first day when both Houses have an actual sitting</strong>.</h2>
 <p>For period A this <strong>does not</strong> include the laying day of the treaty.</p>
 <p>For period B this <strong>does not</strong> include the day on which a Minister makes a statement that the treaty should nevertheless be ratified.</p>
-<p>The first following joint actual sitting day is the start of the scrutiny period.</p>
 <p>We continue to the <strong>day immediately following</strong> the start day.</p>
 <p>If that day is or is followed by a joint actual sitting day...</p>
-<code title='Line 18, app/controllers/calculations/treaty.rb'><pre><a name='18'> 18</a>     if date.next_day.first_joint_actual_sitting_day
+<code title='Line 17, app/controllers/calculations/treaty.rb'><pre><a name='17'> 17</a>     if date.next_day.first_joint_actual_sitting_day
 </pre></code><p>... we set the date to the day of the first joint actual sitting day <strong>following</strong> the start date.</p>
-<code title='Line 21, app/controllers/calculations/treaty.rb'><pre><a name='21'> 21</a>       date = date.next_day.first_joint_actual_sitting_day
+<code title='Line 20, app/controllers/calculations/treaty.rb'><pre><a name='20'> 20</a>       date = date.next_day.first_joint_actual_sitting_day
+</pre></code><p>... we have found the start of the scrutiny period.</p>
+<code title='Line 23, app/controllers/calculations/treaty.rb'><pre><a name='23'> 23</a>       @scrutiny_start_date = date
 </pre></code><p>... we&#39;ve found the first joint actual sitting day so we start counting from day 1.</p>
-<code title='Line 24, app/controllers/calculations/treaty.rb'><pre><a name='24'> 24</a>       day_count = 1
+<code title='Line 26, app/controllers/calculations/treaty.rb'><pre><a name='26'> 26</a>       day_count = 1
 </pre></code><p>... whilst the number of days we’re counting is less than the target number of days to count ...</p>
-<code title='Line 27, app/controllers/calculations/treaty.rb'><pre><a name='27'> 27</a>       while ( day_count < target_day_count ) do
+<code title='Line 29, app/controllers/calculations/treaty.rb'><pre><a name='29'> 29</a>       while ( day_count < target_day_count ) do
 </pre></code><p>... continue to the <strong>next day</strong>.</p>
-<code title='Line 30, app/controllers/calculations/treaty.rb'><pre><a name='30'> 30</a>         date = date.next_day
+<code title='Line 32, app/controllers/calculations/treaty.rb'><pre><a name='32'> 32</a>         date = date.next_day
 </pre></code><p>... and add 1 to the day count if this is an joint actual sitting day.</p>
-<code title='Line 33, app/controllers/calculations/treaty.rb'><pre><a name='33'> 33</a>         day_count +=1 if date.is_joint_actual_sitting_day?
+<code title='Line 35, app/controllers/calculations/treaty.rb'><pre><a name='35'> 35</a>         day_count +=1 if date.is_joint_actual_sitting_day?
 </pre></code><p>... if the calendar has no record of what type of day this is, we can&#39;t calculate the end date, ...</p>
-<code title='Line 36, app/controllers/calculations/treaty.rb'><pre><a name='36'> 36</a>         if date.is_calendar_not_populated?
+<code title='Line 38, app/controllers/calculations/treaty.rb'><pre><a name='38'> 38</a>         if date.is_calendar_not_populated?
 </pre></code><p>... this error message is displayed to users ...</p>
-<code title='Line 39, app/controllers/calculations/treaty.rb'><pre><a name='39'> 39</a>           @error_message = "It's not currently possible to calculate an anticipated end date, as the likely end date occurs during a period for which sitting days are yet to be announced."
+<code title='Line 41, app/controllers/calculations/treaty.rb'><pre><a name='41'> 41</a>           @error_message = "It's not currently possible to calculate an anticipated end date, as the likely end date occurs during a period for which sitting days are yet to be announced."
 </pre></code><p>... and we stop looking through the calendar.</p>
-<code title='Line 42, app/controllers/calculations/treaty.rb'><pre><a name='42'> 42</a>           break
-</pre></code><code title='Line 43, app/controllers/calculations/treaty.rb'><pre><a name='43'> 43</a>         end
-</pre></code><code title='Line 44, app/controllers/calculations/treaty.rb'><pre><a name='44'> 44</a>       end
+<code title='Line 44, app/controllers/calculations/treaty.rb'><pre><a name='44'> 44</a>           break
+</pre></code><code title='Line 45, app/controllers/calculations/treaty.rb'><pre><a name='45'> 45</a>         end
+</pre></code><code title='Line 46, app/controllers/calculations/treaty.rb'><pre><a name='46'> 46</a>       end
 </pre></code><p>If <strong>day immediately following</strong> the laying day is not a joint actual sitting day <strong>and</strong> is not followed by a joint actual sitting day...</p>
-<code title='Line 47, app/controllers/calculations/treaty.rb'><pre><a name='47'> 47</a>     else
+<code title='Line 49, app/controllers/calculations/treaty.rb'><pre><a name='49'> 49</a>     else
 </pre></code><p>.. this error message is displayed to users.</p>
-<code title='Line 50, app/controllers/calculations/treaty.rb'><pre><a name='50'> 50</a>       @error_message = "Unable to find a future joint sitting day. It's not currently possible to calculate an anticipated end date, as the likely end date occurs during a period for which sitting days are yet to be announced."
-</pre></code><code title='Line 51, app/controllers/calculations/treaty.rb'><pre><a name='51'> 51</a>     end
+<code title='Line 52, app/controllers/calculations/treaty.rb'><pre><a name='52'> 52</a>       @error_message = "Unable to find a future joint sitting day. It's not currently possible to calculate an anticipated end date, as the likely end date occurs during a period for which sitting days are yet to be announced."
+</pre></code><code title='Line 53, app/controllers/calculations/treaty.rb'><pre><a name='53'> 53</a>     end
 </pre></code><p>Return the anticipated end date of the scrutiny period for display.</p>
-<code title='Line 54, app/controllers/calculations/treaty.rb'><pre><a name='54'> 54</a>     date
-</pre></code><code title='Line 55, app/controllers/calculations/treaty.rb'><pre><a name='55'> 55</a>   end
-</pre></code><code title='Line 56, app/controllers/calculations/treaty.rb'><pre><a name='56'> 56</a> end</pre></code></body></html>
+<code title='Line 56, app/controllers/calculations/treaty.rb'><pre><a name='56'> 56</a>     date
+</pre></code><code title='Line 57, app/controllers/calculations/treaty.rb'><pre><a name='57'> 57</a>   end
+</pre></code><code title='Line 58, app/controllers/calculations/treaty.rb'><pre><a name='58'> 58</a> end</pre></code></body></html>
