--- a/public/bicameral_si_either_house_sitting.rb.html
+++ b/public/bicameral_si_either_house_sitting.rb.html
@@ -9,7 +9,7 @@
         max-width: 40rem;
         margin: auto;
         padding: 1rem;
-        font-family: 'Helvetica Neue', system-ui;
+        font-family: 'Helvetica Neue','Helvetica', system-ui;
         color: black;
         background-color: white;
       }
@@ -21,58 +21,59 @@
       code pre {white-space: pre-wrap; word-break: break-word;}
       code:hover {color:black;}
       h1, h2 {font-weight:normal;}
+      a.githubline {text-decoration:none;color:gray;font-weight:bold;}
       @media (prefers-color-scheme: dark) {
 body {color:white;background-color:black;}
 }
     </style>
     <title>app/controllers/calculations/bicameral_si_either_house_sitting.rb</title>
   </head>
-  <body><code title='Line 1, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='1'> 1</a> module CALCULATION_BICAMERAL_SI_EITHER_HOUSE_SITTING
+  <body><code title='Line 1, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='1'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/bicameral_si_either_house_sitting.rb#L1'> 1</a> module CALCULATION_BICAMERAL_SI_EITHER_HOUSE_SITTING
 </pre></code><h1>A method for calculating the end date of a scrutiny period, based on days on which <strong>either</strong> House must be sitting or on a short adjournment. This method is used for bicameral negative and made affirmative Statutory Instruments.</h1>
 <p>The calculation counts in actual sitting days, requiring the start date and the number of days to count.</p>
 <p>The calculation is defined by the <a href="https://www.legislation.gov.uk/ukpga/Geo6/9-10/36/section/7#section-7-1">Statutory Instruments Act 1946 Section 7 paragraph 1</a>, though a different calculation may be required if the instrument is laid under another Act - as per <a href="https://www.legislation.gov.uk/ukpga/Geo6/9-10/36/section/7#section-7-3">paragraph 3</a>.</p>
-<code title='Line 6, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='6'> 6</a>   def bicameral_si_either_house_sitting_calculation( date, target_day_count )
+<code title='Line 6, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='6'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/bicameral_si_either_house_sitting.rb#L6'> 6</a>   def bicameral_si_either_house_sitting_calculation( date, target_day_count )
 </pre></code><h2>We start counting on the <strong>first day either House has a scrutiny day</strong>.</h2>
 <p>This will be the day on which the instrument was laid, if that day is a scrutiny day.</p>
 <p>For made affirmative instruments, this is defined by the <a href="https://www.legislation.gov.uk/ukpga/Geo6/9-10/36/section/5#section-5-1">Statutory Instruments Act 1946 Section 5 paragraph 1</a>.</p>
 <p>For draft instruments, this is defined by the <a href="https://www.legislation.gov.uk/ukpga/Geo6/9-10/36/section/6#section-6-1">Statutory Instruments Act 1946 Section 6 paragraph 1</a>.</p>
-<p>Unless the laying day is a scrutiny day in either House, then ...</p>
-<code title='Line 14, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='14'> 14</a>     unless date.is_either_house_scrutiny_day?
-</pre></code><p>... if there is a future scrutiny day in either House ...</p>
-<code title='Line 17, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='17'> 17</a>       if date.first_scrutiny_day_in_either_house
-</pre></code><p>... we set the date to that day.</p>
-<code title='Line 20, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='20'> 20</a>         date = date.first_scrutiny_day_in_either_house
-</pre></code><p>... we have found the start of the scrutiny period.</p>
-<code title='Line 23, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='23'> 23</a>         @scrutiny_start_date = date
-</pre></code><p>If we didn&#39;t find a <strong>future scrutiny day in either House</strong> in our calendar, we can&#39;t calculate the scrutiny period, ...</p>
-<code title='Line 26, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='26'> 26</a>       else
-</pre></code><p>... this error message is displayed ...</p>
-<code title='Line 29, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='29'> 29</a>         @error_message = "Unable to find a future scrutiny day in the House of Commons or the House of Lords. It's not currently possible to calculate an anticipated end date, as the likely end date occurs during a period for which sitting days are yet to be announced."
-</pre></code><p>... and we stop looking for a scrutiny period end date.</p>
-<code title='Line 32, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='32'> 32</a>         return
-</pre></code><code title='Line 33, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='33'> 33</a>       end
-</pre></code><p>Otherwise, we&#39;ve established the laying day is a scrutiny day in at least one House, so we don&#39;t have to cycle through the calendar to find a subsequent one ...</p>
-<code title='Line 36, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='36'> 36</a>     else
+<p>If the laying day is a scrutiny day in at least one House, we don&#39;t have to cycle through the calendar to find a subsequent one ...</p>
+<code title='Line 15, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='15'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/bicameral_si_either_house_sitting.rb#L15'> 15</a>     if date.is_either_house_scrutiny_day?
 </pre></code><p>... and the laying day is the start of the scrutiny period.</p>
-<code title='Line 39, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='39'> 39</a>       @scrutiny_start_date = date
-</pre></code><code title='Line 40, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='40'> 40</a>     end
+<code title='Line 18, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='18'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/bicameral_si_either_house_sitting.rb#L18'> 18</a>       @scrutiny_start_date = date
+</pre></code><p>Otherwise, the laying day is not a scrutiny day in at least one House, then ...</p>
+<code title='Line 21, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='21'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/bicameral_si_either_house_sitting.rb#L21'> 21</a>     else
+</pre></code><p>... if there is a future scrutiny day in either House ...</p>
+<code title='Line 24, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='24'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/bicameral_si_either_house_sitting.rb#L24'> 24</a>       if date.first_scrutiny_day_in_either_house
+</pre></code><p>... we set the date to that day.</p>
+<code title='Line 27, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='27'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/bicameral_si_either_house_sitting.rb#L27'> 27</a>         date = date.first_scrutiny_day_in_either_house
+</pre></code><p>... we have found the start of the scrutiny period.</p>
+<code title='Line 30, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='30'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/bicameral_si_either_house_sitting.rb#L30'> 30</a>         @scrutiny_start_date = date
+</pre></code><p>If we didn&#39;t find a <strong>future scrutiny day in either House</strong> in our calendar, we can&#39;t calculate the scrutiny period, ...</p>
+<code title='Line 33, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='33'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/bicameral_si_either_house_sitting.rb#L33'> 33</a>       else
+</pre></code><p>... this error message is displayed ...</p>
+<code title='Line 36, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='36'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/bicameral_si_either_house_sitting.rb#L36'> 36</a>         @error_message = "Unable to find a future scrutiny day in the House of Commons or the House of Lords. It's not currently possible to calculate an anticipated end date, as the likely end date occurs during a period for which sitting days are yet to be announced."
+</pre></code><p>... and we stop looking for a scrutiny period end date.</p>
+<code title='Line 39, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='39'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/bicameral_si_either_house_sitting.rb#L39'> 39</a>         return
+</pre></code><code title='Line 40, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='40'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/bicameral_si_either_house_sitting.rb#L40'> 40</a>       end
+</pre></code><code title='Line 41, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='41'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/bicameral_si_either_house_sitting.rb#L41'> 41</a>     end
 </pre></code><p>We&#39;ve found the first scrutiny day in either House so we start counting from day 1.</p>
-<code title='Line 43, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='43'> 43</a>     day_count = 1
+<code title='Line 44, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='44'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/bicameral_si_either_house_sitting.rb#L44'> 44</a>     day_count = 1
 </pre></code><h2>Whilst the number of scrutiny days we’re counting is less than the target number of days to count ...</h2>
-<code title='Line 46, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='46'> 46</a>     while ( day_count < target_day_count ) do
+<code title='Line 47, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='47'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/bicameral_si_either_house_sitting.rb#L47'> 47</a>     while ( day_count < target_day_count ) do
 </pre></code><p>... continue to the <strong>next day</strong>.</p>
-<code title='Line 49, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='49'> 49</a>       date = date.next_day
+<code title='Line 50, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='50'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/bicameral_si_either_house_sitting.rb#L50'> 50</a>       date = date.next_day
 </pre></code><p>... and add 1 to the day count if this is a scrutiny day in either House.</p>
-<code title='Line 52, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='52'> 52</a>       day_count +=1 if date.is_either_house_scrutiny_day?
+<code title='Line 53, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='53'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/bicameral_si_either_house_sitting.rb#L53'> 53</a>       day_count +=1 if date.is_either_house_scrutiny_day?
 </pre></code><p>... if the calendar has no record of what type of day this is, we can&#39;t calculate the end date, ...</p>
-<code title='Line 55, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='55'> 55</a>       if date.is_calendar_not_populated?
+<code title='Line 56, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='56'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/bicameral_si_either_house_sitting.rb#L56'> 56</a>       if date.is_calendar_not_populated?
 </pre></code><p>... this error message is displayed to users ...</p>
-<code title='Line 58, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='58'> 58</a>         @error_message = "It's not currently possible to calculate an anticipated end date, as the likely end date occurs during a period for which sitting days are yet to be announced."
+<code title='Line 59, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='59'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/bicameral_si_either_house_sitting.rb#L59'> 59</a>         @error_message = "It's not currently possible to calculate an anticipated end date, as the likely end date occurs during a period for which sitting days are yet to be announced."
 </pre></code><p>... and we stop looking through the calendar.</p>
-<code title='Line 61, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='61'> 61</a>         break
-</pre></code><code title='Line 62, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='62'> 62</a>       end
-</pre></code><code title='Line 63, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='63'> 63</a>     end
+<code title='Line 62, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='62'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/bicameral_si_either_house_sitting.rb#L62'> 62</a>         break
+</pre></code><code title='Line 63, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='63'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/bicameral_si_either_house_sitting.rb#L63'> 63</a>       end
+</pre></code><code title='Line 64, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='64'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/bicameral_si_either_house_sitting.rb#L64'> 64</a>     end
 </pre></code><p>Return the anticipated end date of the scrutiny period for display.</p>
-<code title='Line 66, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='66'> 66</a>     date
-</pre></code><code title='Line 67, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='67'> 67</a>   end
-</pre></code><code title='Line 68, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='68'> 68</a> end</pre></code></body></html>
+<code title='Line 67, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='67'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/bicameral_si_either_house_sitting.rb#L67'> 67</a>     date
+</pre></code><code title='Line 68, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='68'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/bicameral_si_either_house_sitting.rb#L68'> 68</a>   end
+</pre></code><code title='Line 69, app/controllers/calculations/bicameral_si_either_house_sitting.rb'><pre><a name='69'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculations/bicameral_si_either_house_sitting.rb#L69'> 69</a> end</pre></code></body></html>
