updated comments layout, form and response

--- a/public/date.rb.html
+++ b/public/date.rb.html
@@ -8,7 +8,7 @@
       body {
         max-width: 40rem;
         margin: auto;
-        padding: 1rem;
+        padding: 2rem 1rem;
         font-family: 'Helvetica Neue','Helvetica', system-ui;
         color: black;
         background-color: white;
@@ -25,11 +25,12 @@
       a.githubline {color:gray;font-weight:bold;}
       @media (prefers-color-scheme: dark) {
 body {color:white;background-color:black;}
+a {text-decoration:underline;color:white;}
 }
     </style>
     <title>./lib/monkey_patching/date.rb</title>
   </head>
-  <body><p><a href="http://parliament-calendar.herokuapp.com/">parliament-calendar.herokuapp.com</a></p><h1>A monkey patched Ruby date class to handle UK Parliament specific day types.</h1>
+  <body><p><a href="/">parliament-calendar.herokuapp.com</a></p><h1>A monkey patched Ruby date class to handle UK Parliament specific day types.</h1>
 <code title='Line 3, ./lib/monkey_patching/date.rb'><pre><a name='3'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/./lib/monkey_patching/date.rb#L3'> 3</a> class Date
 </pre></code><h2>A set of methods to work out the type of a given day.</h2>
 <h3>We want to check if this is an actual sitting day in the Commons.</h3>
