--- a/public/calculator_controller.rb.html
+++ b/public/calculator_controller.rb.html
@@ -98,7 +98,7 @@ a {text-decoration:underline;color:white;}
 </pre></code><ul>
 <li>Legislative Reform Orders, Public Body Orders and Localism Orders</li>
 </ul>
-<code title='Line 84, app/controllers/calculator_controller.rb'><pre><a name='84'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculator_controller.rb#L84'> 84</a>         when 1, 2, 4
+<code title='Line 84, app/controllers/calculator_controller.rb'><pre><a name='84'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculator_controller.rb#L84'> 84</a>         when 1, 17, 18, 19, 2, 4
 </pre></code><code title='Line 86, app/controllers/calculator_controller.rb'><pre><a name='86'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculator_controller.rb#L86'> 86</a>           @start_date_type = "laying date"
 </pre></code><code title='Line 87, app/controllers/calculator_controller.rb'><pre><a name='87'  class='githubline' href='https://github.com/fantasticlife/egg-timer/tree/master/app/controllers/calculator_controller.rb#L87'> 87</a>           @scrutiny_end_date = bicameral_calculation_both_houses_sitting( @start_date, @day_count )
 </pre></code><ul>
